# ugc_sprint_1

./: .env.docker.example  .env.example  .gitignore  README.md  docker-compose.yml
benchmark/: Dockerfile  bench.ipynb  docker-compose.yml  pyproject.toml
docs/: c2_system.puml  c2_system_AS_IS.puml
etl/: Dockerfile  entrypoint.sh  main.py  pyproject.toml
etl/src/: config.py  constants.py  consumer.py  schemas.py
etl/src/components/: consumer.py  loader.py  queries.py
etl/src/core/: config.py
flask_app/: .dockerignore  Dockerfile  app.py  docker-entrypoint.sh  pyproject.toml  pywsgi.py
flask_app/api/: utils.py
flask_app/api/v1/: clicks.py  custom_events.py  films.py  pages.py
flask_app/config/: settings.py
flask_app/kafka_topics/: create.py  create_topics.py  send.py
flask_app/schemas/: base.py  clicks.py  custom_events.py  films.py  pages.py
flask_app/services/: base.py  clicks.py  custom_events.py  films.py  pages.py
flask_app/tests/: conftest.py
flask_app/tests/functional/: test_endpoints.py
flask_app/utils/: datetimes.py
