[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Maxim Isaev <isaev_0602@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-driver = "^0.2.7"
vertica-python = "^1.3.8"
faker = "^24.4.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
