[tool.poetry]
name = "ugc"
version = "0.1.0"
description = ""
authors = [
    "Maxim Isaev <isaev_0602@mail.ru>",
    "Ilya Kabeshov <ilua.kabeshov01@mail.ru>",
    "Leonid Maslovsky <maslovskie77@gmail.com>"
]
#readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
aiokafka = "0.10.0"
msgspec = "0.18.6"
pydantic-settings = "2.2.1"
aiochclient = {version = "2.6.0", extras = ["aiohttp"]}


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# -- Flake8 --
[tool.flake8]
max-line-length = 135
exclude = [
    "__submodules__",
    ".git",
    "__samples__",
    ".venv",
    "alembic"
]
max-returns-amount = 10
max-parameters-amount = 25
per-file-ignores = [
    'tests/*:F811',
    '__init__.py:F401'
]

# -- isort --
[tool.isort]
line_length = 135
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
