[tool.poetry]
name = "ugc"
version = "0.1.0"
description = ""
authors = [
    "Maxim Isaev <isaev_0602@mail.ru>",
    "Ilya Kabeshov <ilua.kabeshov01@mail.ru>",
    "Leonid Maslovsky <maslovskie77@gmail.com>"
]
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "3.0.2"
Flask-JWT-Extended = "4.6.0"
Flask-RESTful = "0.3.10"
Flasgger = "0.9.7.1"
kafka-python = "2.0.2"
orjson = "3.10.0"
marshmallow = "3.21.1"
gevent = "24.2.1"
python-dotenv = "1.0.1"
flask-jwt-extended = {extras = ["asymmetric_crypto"], version = "4.6.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
flake8-pyproject = "^1.2.3"


# -- Flake8 --
[tool.flake8]
max-line-length = 135
exclude = [
    "__submodules__",
    ".git",
    "__samples__",
    ".venv",
    "alembic"
]
max-returns-amount = 10
max-parameters-amount = 25
per-file-ignores = [
    'tests/*:F811',
    '__init__.py:F401'
]

# -- isort --
[tool.isort]
line_length = 135
multi_line_output = 3
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

